Fixes for responsible mobile design (#242)
- Ensure that buttons text don't overflow using `white-space: normal`
- Ensure that user-provided text (election/question title, description,
  answers..) use `word-break: break-word` css setting to break the words
  in two if required because overflowing.
- Ensure that the warning messages in the affix-bottom during ballot
  selection doesn't prevent the next button to show nor they take too
  much space, by adding `overflow-y: scroll` to that section.
- Ensure power-by doesn't take two lines

--- a/avBooth/multi-question-directive/multi-question-directive.less
+++ b/avBooth/multi-question-directive/multi-question-directive.less
@@ -5,8 +5,13 @@
     font-size: 16px;
   }
 
-  .description {
+  .question-description {
     padding-bottom: 15px;
+  }
+
+  .question-title,
+  .question-description {
+    word-break: break-all;
   }
 
   .filter-input {
@@ -101,5 +106,12 @@
 
   .text-brand-primary {
     color: @av-secondary;
+  }
+}
+
+@media(max-width: @screen-sm-min) {
+  [avb-simultaneous-questions-screen] .affix-bottom .warnings {
+    overflow-y: scroll;
+    max-height: 60px;
   }
 }
