--- a/avBooth/start-screen-directive/start-screen-directive.less
+++ b/avBooth/start-screen-directive/start-screen-directive.less
@@ -20,7 +20,13 @@
     padding-bottom: 10px;
   }
 
-  .description {
+  .election-description {
     padding-bottom: 15px;
+  }
+
+  .election-title,
+  .election-description,
+  .legal-terms {
+    word-break: break-all;
   }
 }
